# etl_testing

./: .env.example  .gitignore  QA_Testing_Approach.pptx  README.md  SETUP.md  pyproject.toml
.cursor/rules/: jira-to-test-cases.mdc  test-case-to-suite.mdc
Testing Orchestrator App/: .env.local.example  .npmrc  README.md  TOOLING.md  next.config.mjs  package-lock.json  package.json  server.js  tailwind.config.ts
Testing Orchestrator App/scripts/: add-component.js  build.js  install.js
config/: alerts.json  connections.yaml  scenarios.yaml  suite.yaml
config/mappings/: README.md  alpinvest_mapping.json  globalcredit_mapping.json  globalcredit_mapping.xlsx  gpe_mapping.json  valdb_mapping.json
config/reports/: demo_report.json  gvc.json  mda.json
config/suites/: README.md  alpinvest_files_to_valdb.yaml  bronze_to_silver.yaml  demo.yaml  dq_report.yaml  e2e_gpe_to_gold.yaml  e2e_valdb_to_gold.yaml  gc_files_to_valdb.yaml  gvc.yaml  mda.yaml  (+5 more)
etl_test/: __init__.py  cli.py  config_loader.py  exceptions.py  logging_setup.py  suite_import.py
samples/: build_demo.py  demo_connections.yaml  demo_mapping.json  demo_mapping.xlsx  demo_suite.yaml  make_mapping_template.py
scripts/: REGRESSION_SCHEDULING.md  SCHEDULING.md  etl_report_task.xml  extract_test_cases.py  install_regression_schedule.py  run_regression.py  scheduled_report_run.py  scheduler_smoke_test.py
tests/: conftest.py  test_comparison.py  test_e2e.py  test_lineage_validator.py  test_mapping_json_loader.py  test_mapping_parser.py  test_normalize.py  test_progress_emit.py  test_report_validator.py
(+105 files in other folders)
