[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-test"
version = "0.1.0"
description = "ETL migration data consistency & integrity test framework (Carlyle Val DB -> Snowflake). Replaces ATOP Jumbo."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "QA / Test Architecture" }]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "tenacity>=8.2",
    "openpyxl>=3.1",
    "tabulate>=0.9",
    "pyodbc>=5.0",
]

[project.optional-dependencies]
connectors = [
    # secure-local-storage: caches the SSO/OAuth token on disk so external-browser
    # (SSO) auth doesn't trigger a browser prompt on every connection.
    "snowflake-connector-python[secure-local-storage]>=3.7",
    "pyarrow>=14.0",
]
dev = ["pytest>=8.0"]

[project.scripts]
etl-test = "etl_test.cli:cli"

[tool.setuptools.packages.find]
include = ["etl_test*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
